samples/_failures_safe/1761466977_e5abc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4148bd50.c: In function ‘main’:
./samples/SAFE/__tmp_4148bd50.c:139:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  139 |     size_t compressed_size
      |     ^~~~~~
./samples/SAFE/__tmp_4148bd50.c:139:5: error: expected declaration or statement at end of input
